fix bug on ios

--- a/src/components/Checkbox/style.scss
+++ b/src/components/Checkbox/style.scss
@@ -7,20 +7,29 @@
   border: 1px solid #c4c7c7;
   color: #f3f3f3;
   background: #c4c7c7;
+  position: initial;
 
   &::after {
     content: '\2713';
   }
 
-  &--checked,
-  &:hover {
+  &--checked {
     background-color: #38b549;
     border-color: #38b549;
   }
 
-  &--checked:hover {
-    border: 1px solid #c4c7c7;
-    color: #f3f3f3;
-    background: #c4c7c7;
+  @media (hover: hover) {
+    &:hover {
+      background-color: #38b549;
+      border-color: #38b549;
+    }
+  }
+
+  @media (hover: hover) {
+    &--checked:hover {
+      border: 1px solid #c4c7c7;
+      color: #f3f3f3;
+      background: #c4c7c7;
+    }
   }
 }
