--- a/src/components/TodoItem/style.scss
+++ b/src/components/TodoItem/style.scss
@@ -61,6 +61,8 @@
     color: #262626;
     cursor: pointer;
     visibility: hidden;
+    text-align: center;
+    padding: 0;
 
     &:hover {
       background-color: #ef5350 !important;
