--- a/src/components/TodoItemList/style.scss
+++ b/src/components/TodoItemList/style.scss
@@ -2,4 +2,6 @@
   padding-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  -webkit-padding-start: 0;
+
 }
